argocd/applications/vaultwarden/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "vaultwarden"
  labels:
    app: "vaultwarden"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "vaultwarden"
  template:
    metadata:
      labels:
        app: "vaultwarden"
    spec:
      containers:
        - name: "vaultwarden"
          image: "vaultwarden/server:latest"
          ports:
            - name: "app"
              containerPort: 80
          volumeMounts:
            - name: "app-data"
              mountPath: "/data"

        - name: "postgres"
          image: "postgres:latest"
          ports:
            - name: "db"
              containerPort: 5432
          volumeMounts:
            - name: "postgres-data"
              mountPath: "/var/lib/postgresql/data"

      volumes:
        - name: "app-data"
          persistentVolumeClaim:
            claimName: "app-data"
        - name: "postgres-data"
          persistentVolumeClaim:
            claimName: "postgres-data"
