argocd/applications/vaultwarden/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "vaultwarden"
    service: "vaultwarden-app"
  name: "vaultwarden-app"
  namespace: "vaultwarden"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "vaultwarden"
      service: "vaultwarden-app"

  template:
    metadata:
      labels:
        app: "vaultwarden"
        service: "vaultwarden-app"
      name: "vaultwarden-app"
      namespace: "vaultwarden"

    spec:
      containers:
        - name: "vaultwarden-app"
          # tag: 1.37.0-alpine
          # index digest: sha256:88b74551f5d79fd43f897c23bd74d5295a6e1fafb5d1ec23a1da92e7a0f06767
          # https://hub.docker.com/layers/vaultwarden/server/1.37.0-alpine
          image: "vaultwarden/server@sha256:88b74551f5d79fd43f897c23bd74d5295a6e1fafb5d1ec23a1da92e7a0f06767"
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: "app"
              containerPort: 80

          resources:
            requests:
              cpu: "10m"
              memory: "75Mi"

          volumeMounts:
            - name: "app-data"
              mountPath: "/data"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "app-data"
          persistentVolumeClaim:
            claimName: "app-data"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "vaultwarden"
    service: "vaultwarden-app"
  name: "vaultwarden-app"
  namespace: "vaultwarden"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "vaultwarden"
    service: "vaultwarden-app"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "vaultwarden"
    service: "vaultwarden-app"
  name: "vaultwarden-web"
  namespace: "vaultwarden"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`bitwarden.tlake.io`)
      kind: Rule
      services:
        - name: "vaultwarden-app"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "vaultwarden"
    service: "vaultwarden-app"
  name: "vaultwarden-websecure"
  namespace: "vaultwarden"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`bitwarden.tlake.io`)
      kind: Rule
      services:
        - name: "vaultwarden-app"
          port: "http-traffic"

  tls:
    certResolver: "production"
