argocd/applications/vaultwarden/routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: "vaultwarden"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "vaultwarden"

---

apiVersion: v1
kind: Service
metadata:
  name: "mariadb"
spec:
  selector:
    app: "mariadb"
  ports:
    - name: "db"
      port: 3306
      protocol: TCP
      targetPort: "db"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "vaultwarden-web"
  namespace: "vaultwarden"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`bitwarden.tlake.io`)
      kind: Rule
      services:
        - name: "vaultwarden"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "vaultwarden-websecure"
  namespace: "vaultwarden"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`bitwarden.tlake.io`)
      kind: Rule
      services:
        - name: "vaultwarden"
          port: "http-traffic"

  tls:
    certResolver: "staging"
